--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
   "name": "tech-tracker-server",
   "version": "0.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js --env=production",
-    "start:dev": "ts-node -r tsconfig-paths/register ./src",
-    "lint": "eslint . --ext .ts"
+    "dev": "nodemon",
+    "tsc": "tsc"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jakeshoemaker/tech-tracker-server.git"
-  },
-  "author": "jake shoemaker",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jakeshoemaker/tech-tracker-server/issues"
-  },
-  "homepage": "https://github.com/jakeshoemaker/tech-tracker-server#readme",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "cookie-parser": "^1.4.5",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-status-codes": "^2.1.4",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "express-validator": "^6.7.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "eslint": "^7.22.0"
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.8",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.9",
+    "@types/faker": "^5.1.4",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.14.9",
+    "faker": "^5.1.0",
+    "nodemon": "^2.0.6",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.1.2"
   }
 }
