--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,25 @@
 {
- "compilerOptions": {
-   "lib": [
-     "es5",
-     "es6"
-   ],
-   "baseUrl": "./",
-   "emitDecoratorMetadata": true,
-   "esModuleInterop": true,
-   "experimentalDecorators": true,
-   "strictPropertyInitialization": false,
-   "importHelpers": true,
-   "module": "commonjs",
-   "outDir": "dist",
-   "removeComments": true,
-   "sourceMap": true,
-   "strict": true,
-   "target": "es6",
-   "moduleResolution": "node",
-   "types": [
-     "node"
-   ],
-   "typeRoots": [
-     "node_modules/@types"
-   ]
- },
- "include": [
-   "src/**/*.ts",
-   "spec/**/*.ts"
- ],
- "exclude": [
-   "src/public/"
- ]
+  "compilerOptions": {
+    /* Visit https://aka.ms/tsconfig.json to read more about this file */
+
+    /* Basic Options */
+    
+    "incremental": true,                   /* Enable incremental compilation */
+    "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
+    "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
+    "sourceMap": true,                     /* Generates corresponding '.map' file. */
+    "outDir": "dist",                        /* Redirect output structure to the directory. */
+    //"strict": true,                           /* Enable all strict type-checking options. */
+    /* Additional Checks */
+    "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "skipLibCheck": true,                     /* Skip type checking of declaration files. */
+    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+  },
+  "watchOptions": {
+    "watchDirectory": "usefsevents",
+    "fallbackPolling": "dynamicPriority"
+  },
+  "exclude": ["node_modules", "**/*.spec.ts", "**/init/*.ts"]
 }
