--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.7.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -26,6 +27,7 @@
     "@types/express": "^4.17.9",
     "@types/faker": "^5.1.4",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.9",
     "faker": "^5.1.0",
     "nodemon": "^2.0.6",
