--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "build-docs": "run-func ./src/services/initService.ts convertToJson"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +18,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.7.0",
+    "js-yaml": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.1"
+    "mongoose": "^5.12.1",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
@@ -31,6 +34,7 @@
     "@types/node": "^14.14.9",
     "faker": "^5.1.0",
     "nodemon": "^2.0.6",
+    "run-func": "^1.0.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
