Updated build docs script, added API documentation

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "nodemon",
     "tsc": "tsc",
-    "build-docs": "run-func ./src/services/initService.ts convertToJson"
+    "build-docs": "run-func /src/services/initService.ts buildDocs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/js-yaml": "^4.0.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
