Hosting model on s3 and pulling into server to make a prediction.
	modified:   package.json
	modified:   src/routes/router.ts
	new file:   src/services/DataService.ts
	renamed:    src/services/initService.ts -> src/services/DocumentationService.ts
	modified:   src/services/PredictionService.ts
	modified:   src/services/ServiceHelpers.ts
	new file:   src/tensorflow/AAPL/group1-shard1of1.bin
	new file:   src/tensorflow/AAPL/model.json
	new file:   src/tensorflow/AMZN/group1-shard1of1.bin
	new file:   src/tensorflow/AMZN/model.json
	new file:   src/tensorflow/FB/group1-shard1of1.bin
	new file:   src/tensorflow/FB/model.json
	new file:   src/tensorflow/GOOGL/group1-shard1of1.bin
	new file:   src/tensorflow/GOOGL/model.json
	new file:   src/tensorflow/JNJ/group1-shard1of1.bin
	new file:   src/tensorflow/JNJ/model.json
	new file:   src/tensorflow/JPM/group1-shard1of1.bin
	new file:   src/tensorflow/JPM/model.json
	new file:   src/tensorflow/MSFT/group1-shard1of1.bin
	new file:   src/tensorflow/MSFT/model.json
	new file:   src/tensorflow/TSLA/group1-shard1of1.bin
	new file:   src/tensorflow/TSLA/model.json
	modified:   yarn.lock

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "scripts": {
     "dev": "nodemon",
     "tsc": "tsc",
-    "build-docs": "run-func /src/services/initService.ts buildDocs"
+    "build-docs": "run-func /src/services/initService.ts buildDocs",
+    "get-models": "aws s3 cp s3://tt-model-weights/ src/tensorflow/ --recursive"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^3.3.0",
+    "@tensorflow/tfjs-node": "^3.4.0",
     "@types/js-yaml": "^4.0.0",
+    "async": "^3.2.0",
     "aws-sdk": "^2.886.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
