--- a/tt-frontend/package.json
+++ b/tt-frontend/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.1",
     "axios": "^0.21.1",
+    "chart.js": "^3.1.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
