--- a/tt-frontend/package.json
+++ b/tt-frontend/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.15.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "chart.js": "^3.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
